--- a/README.qmd
+++ b/README.qmd
@@ -31,7 +31,7 @@ isinstance(DataFrame(), AbstractPandasFrame)
 
 ### Simple use: isinstance to switch behavior
 
-The `fill_na()` function below can handles both pandas and polars DataFrames.
+The `fill_na()` function below can handle both pandas and polars DataFrames.
 
 ```{python}
 def fill_na(data, x):
@@ -40,7 +40,13 @@ def fill_na(data, x):
     elif isinstance(data, AbstractPolarsFrame):
         return data.fill_nan(x)
 
+```
 
+Notice that neither `pandas` nor `polars` need to be imported when defining `fill_na()`.
+
+Here is an example of calling `fill_na()` on both kinds of DataFrames.
+
+```{python}
 # handle pandas ----
 
 import pandas as pd
@@ -57,10 +63,19 @@ df = pl.DataFrame({"x": [1, 2, None]})
 fill_na(df, 3)
 ```
 
-Notice that neither `pandas` nor `polars` need to be imported when defining `fill_na()`.
+The key here is that a user could have only pandas, or only polars, installed.
+Importantly, doing the isinstance checks do not import any libraries!
 
 
 ### Advanced use: generic function dispatch
+
+`databackend` shines when combined with [generic function dispatch](https://mchow.com/posts/2020-02-24-single-dispatch-data-science/).
+This is a programming approach where you declare a function (e.g. `fill_na()`),
+and then register each backend specific implementation on the function.
+
+Python has a built-in function implementing this called `functools.singledispatch`.
+
+Here is an example of the previous `fill_na()` function written using it.
 
 ```{python}
 from functools import singledispatch
@@ -78,8 +93,16 @@ def _(data: AbstractPandasFrame, x):
 @fill_na2.register
 def _(data: AbstractPolarsFrame, x):
     return data.fill_nan(x)
+```
 
+Note two important decorators:
 
+* `@singledispatch` defines a default function. This gets called if no specific implementations are found. 
+* `@fill_na2.register` defines specific versions of the function.
+
+Here's an example of it in action.
+
+```{python}
 # example ----
 
 import pandas as pd
