--- a/README.qmd
+++ b/README.qmd
@@ -156,7 +156,12 @@ class MyABC(ABC):
     pass
 
 from io import StringIO
+
 MyABC.register(StringIO)
+
+
+# StringIO is a "virtual subclass" of MyABC
+isinstance(StringIO("abc"), MyABC)
 ```
 
 The key difference is that you can specify the virtual subclass using the tuple `("<mod_name>", "<class_name>")`.
