docs: add link to singledispatch

--- a/README.qmd
+++ b/README.qmd
@@ -98,7 +98,7 @@ Importantly, doing the isinstance checks do not import any libraries!
 This is a programming approach where you declare a function (e.g. `fill_na()`),
 and then register each backend specific implementation on the function.
 
-Python has a built-in function implementing this called `functools.singledispatch`.
+Python has a built-in function implementing this called [`functools.singledispatch`](https://docs.python.org/3/library/functools.html#functools.singledispatch).
 
 Here is an example of the previous `fill_na()` function written using it.
 
