--- a/README.qmd
+++ b/README.qmd
@@ -52,6 +52,8 @@ issubclass(DataFrame, AbstractPandasFrame)
 isinstance(DataFrame(), AbstractPandasFrame)
 ```
 
+> 📝 Note that you can use `AbstractPandasFrame.register_backend("pandas", "DataFrame")`, as an alternative way to register backends.
+
 ### Simple fill_na: isinstance to switch behavior
 
 The `fill_na()` function below uses custom handling for pandas and polars.
